SPRO-15: Fix overlap issue for wallet authorize message on page load

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -181,6 +181,7 @@
 
 .wallet-authorize-info {
     .lib-message(warning);
+	clear: both;
     margin-bottom: 20px;
     margin-top: 20px;
 }
